src/KLFunParser.output
Nonterminals useless in grammar

   block
   dimension_list


Terminals unused in grammar

   WORD
   SYMBOL
   IF
   ELSE
   LSQB
   RSQB
   COMMA
   COLON
   COLON2
   SEMI
   DOT
   NEWLINE


Grammar

    0 $accept: script_file "end of file"

    1 script_file: script_item_list

    2 statement: IDENT ASSGN expression
    3          | CONTROL ASSGN expression
    4          | COMMAND
    5          | LBRA statement_list RBRA

    6 script_item_list: %empty
    7                 | script_item_list statement
    8                 | script_item_list simple_definition
    9                 | script_item_list handler_definition

   10 statement_list: %empty
   11               | statement_list statement

   12 simple_definition: TYPE IDENT

   13 handler_definition: ON EVENT statement

   14 atom: IDENT
   15     | CONTROL
   16     | LITERAL_INT
   17     | LITERAL_FLOAT
   18     | LITERAL_STRING
   19     | LITERAL_TIME

   20 expression: atom
   21           | expression PLUS expression
   22           | expression MINUS expression
   23           | expression MULT expression
   24           | expression MOD expression
   25           | expression DIVIDE expression
   26           | MINUS expression
   27           | NOT expression
   28           | expression LT expression
   29           | expression GT expression
   30           | expression NE expression
   31           | expression EQ expression
   32           | expression GE expression
   33           | expression LE expression
   34           | expression AND expression
   35           | expression OR expression
   36           | expression POWER expression
   37           | LB expression RB


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
WORD (258)
SYMBOL (259)
TYPE (260) 12
EVENT (261) 13
IDENT (262) 2 12 14
LITERAL_INT (263) 16
LITERAL_FLOAT (264) 17
LITERAL_TIME (265) 19
LITERAL_STRING (266) 18
COMMAND (267) 4
CONTROL (268) 3 15
ASSGN (269) 2 3
IF (270)
ELSE (271)
ON (272) 13
LSQB (273)
RSQB (274)
LBRA (275) 5
RBRA (276) 5
LB (277) 37
RB (278) 37
COMMA (279)
COLON (280)
COLON2 (281)
SEMI (282)
DOT (283)
PLUS (284) 21
MINUS (285) 22 26
MULT (286) 23
DIVIDE (287) 25
MOD (288) 24
POWER (289) 36
LT (290) 28
GT (291) 29
LE (292) 33
GE (293) 32
EQ (294) 31
NE (295) 30
AND (296) 34
OR (297) 35
NOT (298) 27
NEWLINE (299)
NEG (300)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
script_file (47)
    on left: 1, on right: 0
statement (48)
    on left: 2 3 4 5, on right: 7 11 13
script_item_list (49)
    on left: 6 7 8 9, on right: 1 7 8 9
statement_list (50)
    on left: 10 11, on right: 5 11
simple_definition (51)
    on left: 12, on right: 8
handler_definition (52)
    on left: 13, on right: 9
atom (53)
    on left: 14 15 16 17 18 19, on right: 20
expression (54)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37,
    on right: 2 3 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37


State 0

    0 $accept: . script_file "end of file"

    $default  reduce using rule 6 (script_item_list)

    script_file       go to state 1
    script_item_list  go to state 2


State 1

    0 $accept: script_file . "end of file"

    "end of file"  shift, and go to state 3


State 2

    1 script_file: script_item_list .
    7 script_item_list: script_item_list . statement
    8                 | script_item_list . simple_definition
    9                 | script_item_list . handler_definition

    TYPE     shift, and go to state 4
    IDENT    shift, and go to state 5
    COMMAND  shift, and go to state 6
    CONTROL  shift, and go to state 7
    ON       shift, and go to state 8
    LBRA     shift, and go to state 9

    $default  reduce using rule 1 (script_file)

    statement           go to state 10
    simple_definition   go to state 11
    handler_definition  go to state 12


State 3

    0 $accept: script_file "end of file" .

    $default  accept


State 4

   12 simple_definition: TYPE . IDENT

    IDENT  shift, and go to state 13


State 5

    2 statement: IDENT . ASSGN expression

    ASSGN  shift, and go to state 14


State 6

    4 statement: COMMAND .

    $default  reduce using rule 4 (statement)


State 7

    3 statement: CONTROL . ASSGN expression

    ASSGN  shift, and go to state 15


State 8

   13 handler_definition: ON . EVENT statement

    EVENT  shift, and go to state 16


State 9

    5 statement: LBRA . statement_list RBRA

    $default  reduce using rule 10 (statement_list)

    statement_list  go to state 17


State 10

    7 script_item_list: script_item_list statement .

    $default  reduce using rule 7 (script_item_list)


State 11

    8 script_item_list: script_item_list simple_definition .

    $default  reduce using rule 8 (script_item_list)


State 12

    9 script_item_list: script_item_list handler_definition .

    $default  reduce using rule 9 (script_item_list)


State 13

   12 simple_definition: TYPE IDENT .

    $default  reduce using rule 12 (simple_definition)


State 14

    2 statement: IDENT ASSGN . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 28


State 15

    3 statement: CONTROL ASSGN . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 29


State 16

   13 handler_definition: ON EVENT . statement

    IDENT    shift, and go to state 5
    COMMAND  shift, and go to state 6
    CONTROL  shift, and go to state 7
    LBRA     shift, and go to state 9

    statement  go to state 30


State 17

    5 statement: LBRA statement_list . RBRA
   11 statement_list: statement_list . statement

    IDENT    shift, and go to state 5
    COMMAND  shift, and go to state 6
    CONTROL  shift, and go to state 7
    LBRA     shift, and go to state 9
    RBRA     shift, and go to state 31

    statement  go to state 32


State 18

   14 atom: IDENT .

    $default  reduce using rule 14 (atom)


State 19

   16 atom: LITERAL_INT .

    $default  reduce using rule 16 (atom)


State 20

   17 atom: LITERAL_FLOAT .

    $default  reduce using rule 17 (atom)


State 21

   19 atom: LITERAL_TIME .

    $default  reduce using rule 19 (atom)


State 22

   18 atom: LITERAL_STRING .

    $default  reduce using rule 18 (atom)


State 23

   15 atom: CONTROL .

    $default  reduce using rule 15 (atom)


State 24

   37 expression: LB . expression RB

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 33


State 25

   26 expression: MINUS . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 34


State 26

   27 expression: NOT . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 35


State 27

   20 expression: atom .

    $default  reduce using rule 20 (expression)


State 28

    2 statement: IDENT ASSGN expression .
   21 expression: expression . PLUS expression
   22           | expression . MINUS expression
   23           | expression . MULT expression
   24           | expression . MOD expression
   25           | expression . DIVIDE expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . NE expression
   31           | expression . EQ expression
   32           | expression . GE expression
   33           | expression . LE expression
   34           | expression . AND expression
   35           | expression . OR expression
   36           | expression . POWER expression

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    MULT    shift, and go to state 38
    DIVIDE  shift, and go to state 39
    MOD     shift, and go to state 40
    POWER   shift, and go to state 41
    LT      shift, and go to state 42
    GT      shift, and go to state 43
    LE      shift, and go to state 44
    GE      shift, and go to state 45
    EQ      shift, and go to state 46
    NE      shift, and go to state 47
    AND     shift, and go to state 48
    OR      shift, and go to state 49

    $default  reduce using rule 2 (statement)


State 29

    3 statement: CONTROL ASSGN expression .
   21 expression: expression . PLUS expression
   22           | expression . MINUS expression
   23           | expression . MULT expression
   24           | expression . MOD expression
   25           | expression . DIVIDE expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . NE expression
   31           | expression . EQ expression
   32           | expression . GE expression
   33           | expression . LE expression
   34           | expression . AND expression
   35           | expression . OR expression
   36           | expression . POWER expression

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    MULT    shift, and go to state 38
    DIVIDE  shift, and go to state 39
    MOD     shift, and go to state 40
    POWER   shift, and go to state 41
    LT      shift, and go to state 42
    GT      shift, and go to state 43
    LE      shift, and go to state 44
    GE      shift, and go to state 45
    EQ      shift, and go to state 46
    NE      shift, and go to state 47
    AND     shift, and go to state 48
    OR      shift, and go to state 49

    $default  reduce using rule 3 (statement)


State 30

   13 handler_definition: ON EVENT statement .

    $default  reduce using rule 13 (handler_definition)


State 31

    5 statement: LBRA statement_list RBRA .

    $default  reduce using rule 5 (statement)


State 32

   11 statement_list: statement_list statement .

    $default  reduce using rule 11 (statement_list)


State 33

   21 expression: expression . PLUS expression
   22           | expression . MINUS expression
   23           | expression . MULT expression
   24           | expression . MOD expression
   25           | expression . DIVIDE expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . NE expression
   31           | expression . EQ expression
   32           | expression . GE expression
   33           | expression . LE expression
   34           | expression . AND expression
   35           | expression . OR expression
   36           | expression . POWER expression
   37           | LB expression . RB

    RB      shift, and go to state 50
    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    MULT    shift, and go to state 38
    DIVIDE  shift, and go to state 39
    MOD     shift, and go to state 40
    POWER   shift, and go to state 41
    LT      shift, and go to state 42
    GT      shift, and go to state 43
    LE      shift, and go to state 44
    GE      shift, and go to state 45
    EQ      shift, and go to state 46
    NE      shift, and go to state 47
    AND     shift, and go to state 48
    OR      shift, and go to state 49


State 34

   21 expression: expression . PLUS expression
   22           | expression . MINUS expression
   23           | expression . MULT expression
   24           | expression . MOD expression
   25           | expression . DIVIDE expression
   26           | MINUS expression .
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . NE expression
   31           | expression . EQ expression
   32           | expression . GE expression
   33           | expression . LE expression
   34           | expression . AND expression
   35           | expression . OR expression
   36           | expression . POWER expression

    POWER  shift, and go to state 41

    $default  reduce using rule 26 (expression)


State 35

   21 expression: expression . PLUS expression
   22           | expression . MINUS expression
   23           | expression . MULT expression
   24           | expression . MOD expression
   25           | expression . DIVIDE expression
   27           | NOT expression .
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . NE expression
   31           | expression . EQ expression
   32           | expression . GE expression
   33           | expression . LE expression
   34           | expression . AND expression
   35           | expression . OR expression
   36           | expression . POWER expression

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    MULT    shift, and go to state 38
    DIVIDE  shift, and go to state 39
    MOD     shift, and go to state 40
    POWER   shift, and go to state 41
    LT      shift, and go to state 42
    GT      shift, and go to state 43
    LE      shift, and go to state 44
    GE      shift, and go to state 45
    EQ      shift, and go to state 46
    NE      shift, and go to state 47

    $default  reduce using rule 27 (expression)


State 36

   21 expression: expression PLUS . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 51


State 37

   22 expression: expression MINUS . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 52


State 38

   23 expression: expression MULT . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 53


State 39

   25 expression: expression DIVIDE . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 54


State 40

   24 expression: expression MOD . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 55


State 41

   36 expression: expression POWER . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 56


State 42

   28 expression: expression LT . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 57


State 43

   29 expression: expression GT . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 58


State 44

   33 expression: expression LE . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 59


State 45

   32 expression: expression GE . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 60


State 46

   31 expression: expression EQ . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 61


State 47

   30 expression: expression NE . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 62


State 48

   34 expression: expression AND . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 63


State 49

   35 expression: expression OR . expression

    IDENT           shift, and go to state 18
    LITERAL_INT     shift, and go to state 19
    LITERAL_FLOAT   shift, and go to state 20
    LITERAL_TIME    shift, and go to state 21
    LITERAL_STRING  shift, and go to state 22
    CONTROL         shift, and go to state 23
    LB              shift, and go to state 24
    MINUS           shift, and go to state 25
    NOT             shift, and go to state 26

    atom        go to state 27
    expression  go to state 64


State 50

   37 expression: LB expression RB .

    $default  reduce using rule 37 (expression)


State 51

   21 expression: expression . PLUS expression
   21           | expression PLUS expression .
   22           | expression . MINUS expression
   23           | expression . MULT expression
   24           | expression . MOD expression
   25           | expression . DIVIDE expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . NE expression
   31           | expression . EQ expression
   32           | expression . GE expression
   33           | expression . LE expression
   34           | expression . AND expression
   35           | expression . OR expression
   36           | expression . POWER expression

    MULT    shift, and go to state 38
    DIVIDE  shift, and go to state 39
    MOD     shift, and go to state 40
    POWER   shift, and go to state 41

    $default  reduce using rule 21 (expression)


State 52

   21 expression: expression . PLUS expression
   22           | expression . MINUS expression
   22           | expression MINUS expression .
   23           | expression . MULT expression
   24           | expression . MOD expression
   25           | expression . DIVIDE expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . NE expression
   31           | expression . EQ expression
   32           | expression . GE expression
   33           | expression . LE expression
   34           | expression . AND expression
   35           | expression . OR expression
   36           | expression . POWER expression

    MULT    shift, and go to state 38
    DIVIDE  shift, and go to state 39
    MOD     shift, and go to state 40
    POWER   shift, and go to state 41

    $default  reduce using rule 22 (expression)


State 53

   21 expression: expression . PLUS expression
   22           | expression . MINUS expression
   23           | expression . MULT expression
   23           | expression MULT expression .
   24           | expression . MOD expression
   25           | expression . DIVIDE expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . NE expression
   31           | expression . EQ expression
   32           | expression . GE expression
   33           | expression . LE expression
   34           | expression . AND expression
   35           | expression . OR expression
   36           | expression . POWER expression

    POWER  shift, and go to state 41

    $default  reduce using rule 23 (expression)


State 54

   21 expression: expression . PLUS expression
   22           | expression . MINUS expression
   23           | expression . MULT expression
   24           | expression . MOD expression
   25           | expression . DIVIDE expression
   25           | expression DIVIDE expression .
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . NE expression
   31           | expression . EQ expression
   32           | expression . GE expression
   33           | expression . LE expression
   34           | expression . AND expression
   35           | expression . OR expression
   36           | expression . POWER expression

    POWER  shift, and go to state 41

    $default  reduce using rule 25 (expression)


State 55

   21 expression: expression . PLUS expression
   22           | expression . MINUS expression
   23           | expression . MULT expression
   24           | expression . MOD expression
   24           | expression MOD expression .
   25           | expression . DIVIDE expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . NE expression
   31           | expression . EQ expression
   32           | expression . GE expression
   33           | expression . LE expression
   34           | expression . AND expression
   35           | expression . OR expression
   36           | expression . POWER expression

    POWER  shift, and go to state 41

    $default  reduce using rule 24 (expression)


State 56

   21 expression: expression . PLUS expression
   22           | expression . MINUS expression
   23           | expression . MULT expression
   24           | expression . MOD expression
   25           | expression . DIVIDE expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . NE expression
   31           | expression . EQ expression
   32           | expression . GE expression
   33           | expression . LE expression
   34           | expression . AND expression
   35           | expression . OR expression
   36           | expression . POWER expression
   36           | expression POWER expression .

    POWER  shift, and go to state 41

    $default  reduce using rule 36 (expression)


State 57

   21 expression: expression . PLUS expression
   22           | expression . MINUS expression
   23           | expression . MULT expression
   24           | expression . MOD expression
   25           | expression . DIVIDE expression
   28           | expression . LT expression
   28           | expression LT expression .
   29           | expression . GT expression
   30           | expression . NE expression
   31           | expression . EQ expression
   32           | expression . GE expression
   33           | expression . LE expression
   34           | expression . AND expression
   35           | expression . OR expression
   36           | expression . POWER expression

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    MULT    shift, and go to state 38
    DIVIDE  shift, and go to state 39
    MOD     shift, and go to state 40
    POWER   shift, and go to state 41

    LT  error (nonassociative)
    GT  error (nonassociative)
    LE  error (nonassociative)
    GE  error (nonassociative)
    EQ  error (nonassociative)
    NE  error (nonassociative)

    $default  reduce using rule 28 (expression)


State 58

   21 expression: expression . PLUS expression
   22           | expression . MINUS expression
   23           | expression . MULT expression
   24           | expression . MOD expression
   25           | expression . DIVIDE expression
   28           | expression . LT expression
   29           | expression . GT expression
   29           | expression GT expression .
   30           | expression . NE expression
   31           | expression . EQ expression
   32           | expression . GE expression
   33           | expression . LE expression
   34           | expression . AND expression
   35           | expression . OR expression
   36           | expression . POWER expression

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    MULT    shift, and go to state 38
    DIVIDE  shift, and go to state 39
    MOD     shift, and go to state 40
    POWER   shift, and go to state 41

    LT  error (nonassociative)
    GT  error (nonassociative)
    LE  error (nonassociative)
    GE  error (nonassociative)
    EQ  error (nonassociative)
    NE  error (nonassociative)

    $default  reduce using rule 29 (expression)


State 59

   21 expression: expression . PLUS expression
   22           | expression . MINUS expression
   23           | expression . MULT expression
   24           | expression . MOD expression
   25           | expression . DIVIDE expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . NE expression
   31           | expression . EQ expression
   32           | expression . GE expression
   33           | expression . LE expression
   33           | expression LE expression .
   34           | expression . AND expression
   35           | expression . OR expression
   36           | expression . POWER expression

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    MULT    shift, and go to state 38
    DIVIDE  shift, and go to state 39
    MOD     shift, and go to state 40
    POWER   shift, and go to state 41

    LT  error (nonassociative)
    GT  error (nonassociative)
    LE  error (nonassociative)
    GE  error (nonassociative)
    EQ  error (nonassociative)
    NE  error (nonassociative)

    $default  reduce using rule 33 (expression)


State 60

   21 expression: expression . PLUS expression
   22           | expression . MINUS expression
   23           | expression . MULT expression
   24           | expression . MOD expression
   25           | expression . DIVIDE expression
   28           | expression . LT expression
   29           | expression . GT expression
   30           | expression . NE expression
   31           | expression . EQ expression
   32           | expression . GE expression
   32           | expression GE expression .
   33           | expression . LE expression
   34           | expression . AND expression
   35           | expression . OR expression
   36           | expression . POWER expression

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    MULT    shift, and go to state 38
    DIVIDE  shift, and go to state 39
    MOD     shift, and go to state 40
    POWER   shift, and go to state 41

    LT  error (nonassociative)
    GT  error (nonassociative)
    LE  error (nonassociative)
    GE  error (nonassociative)
    EQ  error (nonassociative)
    NE  error (nonassociative)

    $default  reduce using rule 32 (expression)


State 61
